# HackerNews-Podcast

./: README.md  openapi.json
backend/: .env  Cargo.toml
backend/src/: main.rs  prompt.md
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: theme-toggle.tsx
frontend/src/lib/: tts.py  tts.ts
frontend/src/pages/: HomePage.tsx  StoryPage.tsx
